syntax = "proto3";

package Proj.Proto;

option java_multiple_files = true;
option java_package = "proj_contract.proto";
option java_outer_classname = "DataProto";

message Coordinates {
	int32 x = 1;
	int32 y = 2;
}

message TimestepData {
	Coordinates coordinates = 1;
	int32 timestep = 2;
}

message EntityData {
	string type = 1;
	Coordinates coordinates = 2;
	int32 id = 3; 
} 

message EntitiesData {
	repeated EntityData entityData = 1;
}
