syntax = "proto3";

package Proj.Proto;
option java_multiple_files = true;
option java_package = "Proj.Services";

import "LocationClaim.proto";


service ServerService{

	rpc register(RegisterRequest) returns (ServerResponse);
	rpc broadcastLocationClaim(LocationClaim) returns (ServerResponse);
	
		
}

message RegisterRequest{
	string id = 1;
	string location = 2;
	string type = 3;
	int32 speed = 4;
}

message ServerResponse{
	string responseMessage = 1;
	int32 responseCode = 2;
}